fix carousel overflow

--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,20 @@ body {
 }
 
 .carousel {
-  width: 1200px;
-  height: 1200px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.carousel-item {
+  height: 50%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel-item img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 #keyboardimg {
